...
                            Image(systemName: "envelope")
                            Text("Support")
                        }
                    }
                    .buttonStyle(DefaultButtonStyle())
                    .padding()
                    .accessibilityIdentifier("SupportButton")
                    
                    Spacer()
                    
                    Button("Close") {
                        isPresented = false
                    }
                    .buttonStyle(DefaultButtonStyle())
                    .padding()
                    .accessibilityIdentifier("CloseButton")
                }
                .padding(.horizontal)
            }
            .cornerRadius(20)
            .shadow(radius: 20)
        }
...
